--- a/vignettes/DesignPrimers.Rnw
+++ b/vignettes/DesignPrimers.Rnw
@@ -151,7 +151,7 @@ unique(desc)
 Now that we have our 19 different species names, we must add them to the database as the identifier of each sequence.
 
 <<expr4,eval=TRUE>>=
-Add2DB(data.frame(identifier=desc), dbConn)
+Add2DB(data.frame(identifier=desc, stringsAsFactors=FALSE), dbConn)
 @
 
 %------------------------------------------------------------
